@@ -1,5 +1,5 @@
 /*
- * Copyright 2023-2025 the original author or authors.
+ * Copyright 2023-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,16 +17,16 @@
 package org.springframework.ai.model.tool;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
+import java.util.Objects;
 
 import org.jspecify.annotations.Nullable;
 
 import org.springframework.ai.chat.prompt.ChatOptions;
+import org.springframework.ai.chat.prompt.DefaultChatOptions;
+import org.springframework.ai.chat.prompt.DefaultChatOptionsBuilder;
 import org.springframework.ai.tool.ToolCallback;
 import org.springframework.util.Assert;
 
@@ -34,283 +34,172 @@ import org.springframework.util.Assert;
  * Default implementation of {@link ToolCallingChatOptions}.
  *
  * @author Thomas Vitale
+ * @author Sebastien Deleuze
+ * @author Christian Tzolov
  * @since 1.0.0
  */
-public class DefaultToolCallingChatOptions implements ToolCallingChatOptions {
+public class DefaultToolCallingChatOptions extends DefaultChatOptions implements ToolCallingChatOptions {
 
-	private List<ToolCallback> toolCallbacks = new ArrayList<>();
+	private final @Nullable List<ToolCallback> toolCallbacks;
 
-	private Set<String> toolNames = new HashSet<>();
+	private final @Nullable Map<String, Object> toolContext;
 
-	private Map<String, Object> toolContext = new HashMap<>();
-
-	private @Nullable Boolean internalToolExecutionEnabled;
-
-	private @Nullable String model;
-
-	private @Nullable Double frequencyPenalty;
-
-	private @Nullable Integer maxTokens;
-
-	private @Nullable Double presencePenalty;
-
-	private @Nullable List<String> stopSequences;
-
-	private @Nullable Double temperature;
-
-	private @Nullable Integer topK;
-
-	private @Nullable Double topP;
-
-	@Override
-	public List<ToolCallback> getToolCallbacks() {
-		return List.copyOf(this.toolCallbacks);
+	protected DefaultToolCallingChatOptions(@Nullable List<ToolCallback> toolCallbacks,
+			@Nullable Map<String, Object> toolContext, @Nullable String model, @Nullable Double frequencyPenalty,
+			@Nullable Integer maxTokens, @Nullable Double presencePenalty, @Nullable List<String> stopSequences,
+			@Nullable Double temperature, @Nullable Integer topK, @Nullable Double topP) {
+		super(model, frequencyPenalty, maxTokens, presencePenalty, stopSequences, temperature, topK, topP);
+		this.toolCallbacks = (toolCallbacks != null ? List.copyOf(toolCallbacks) : null);
+		this.toolContext = (toolContext != null ? Map.copyOf(toolContext) : null);
 	}
 
 	@Override
-	public void setToolCallbacks(List<ToolCallback> toolCallbacks) {
-		Assert.notNull(toolCallbacks, "toolCallbacks cannot be null");
-		Assert.noNullElements(toolCallbacks, "toolCallbacks cannot contain null elements");
-		this.toolCallbacks = new ArrayList<>(toolCallbacks);
+	public @Nullable List<ToolCallback> getToolCallbacks() {
+		return this.toolCallbacks;
 	}
 
 	@Override
-	public Set<String> getToolNames() {
-		return Set.copyOf(this.toolNames);
+	public @Nullable Map<String, Object> getToolContext() {
+		return this.toolContext;
 	}
 
 	@Override
-	public void setToolNames(Set<String> toolNames) {
-		Assert.notNull(toolNames, "toolNames cannot be null");
-		Assert.noNullElements(toolNames, "toolNames cannot contain null elements");
-		toolNames.forEach(toolName -> Assert.hasText(toolName, "toolNames cannot contain empty elements"));
-		this.toolNames = new HashSet<>(toolNames);
+	public ToolCallingChatOptions.Builder<?> mutate() {
+		return DefaultToolCallingChatOptions.builder()
+			.model(getModel())
+			.frequencyPenalty(getFrequencyPenalty())
+			.maxTokens(getMaxTokens())
+			.presencePenalty(getPresencePenalty())
+			.stopSequences(getStopSequences())
+			.temperature(getTemperature())
+			.topK(getTopK())
+			.topP(getTopP())
+			.toolCallbacks(getToolCallbacks())
+			.toolContext(getToolContext());
 	}
 
 	@Override
-	public Map<String, Object> getToolContext() {
-		return Map.copyOf(this.toolContext);
+	public boolean equals(@Nullable Object o) {
+		if (this == o) {
+			return true;
+		}
+		if (o == null || getClass() != o.getClass()) {
+			return false;
+		}
+		if (!super.equals(o)) {
+			return false;
+		}
+		DefaultToolCallingChatOptions that = (DefaultToolCallingChatOptions) o;
+		return Objects.equals(this.toolCallbacks, that.toolCallbacks)
+				&& Objects.equals(this.toolContext, that.toolContext);
 	}
 
 	@Override
-	public void setToolContext(Map<String, Object> toolContext) {
-		Assert.notNull(toolContext, "toolContext cannot be null");
-		Assert.noNullElements(toolContext.keySet(), "toolContext cannot contain null keys");
-		this.toolContext = new HashMap<>(toolContext);
+	public int hashCode() {
+		return Objects.hash(super.hashCode(), this.toolCallbacks, this.toolContext);
 	}
 
-	@Override
-	public @Nullable Boolean getInternalToolExecutionEnabled() {
-		return this.internalToolExecutionEnabled;
-	}
-
-	@Override
-	public void setInternalToolExecutionEnabled(@Nullable Boolean internalToolExecutionEnabled) {
-		this.internalToolExecutionEnabled = internalToolExecutionEnabled;
-	}
-
-	@Override
-	public @Nullable String getModel() {
-		return this.model;
-	}
-
-	public void setModel(@Nullable String model) {
-		this.model = model;
-	}
-
-	@Override
-	public @Nullable Double getFrequencyPenalty() {
-		return this.frequencyPenalty;
-	}
-
-	public void setFrequencyPenalty(@Nullable Double frequencyPenalty) {
-		this.frequencyPenalty = frequencyPenalty;
-	}
-
-	@Override
-	public @Nullable Integer getMaxTokens() {
-		return this.maxTokens;
-	}
-
-	public void setMaxTokens(@Nullable Integer maxTokens) {
-		this.maxTokens = maxTokens;
-	}
-
-	@Override
-	public @Nullable Double getPresencePenalty() {
-		return this.presencePenalty;
-	}
-
-	public void setPresencePenalty(@Nullable Double presencePenalty) {
-		this.presencePenalty = presencePenalty;
-	}
-
-	@Override
-	public @Nullable List<String> getStopSequences() {
-		return this.stopSequences;
-	}
-
-	public void setStopSequences(@Nullable List<String> stopSequences) {
-		this.stopSequences = stopSequences;
-	}
-
-	@Override
-	public @Nullable Double getTemperature() {
-		return this.temperature;
-	}
-
-	public void setTemperature(@Nullable Double temperature) {
-		this.temperature = temperature;
-	}
-
-	@Override
-	public @Nullable Integer getTopK() {
-		return this.topK;
-	}
-
-	public void setTopK(@Nullable Integer topK) {
-		this.topK = topK;
-	}
-
-	@Override
-	public @Nullable Double getTopP() {
-		return this.topP;
-	}
-
-	public void setTopP(@Nullable Double topP) {
-		this.topP = topP;
-	}
-
-	@Override
-	@SuppressWarnings("unchecked")
-	public <T extends ChatOptions> T copy() {
-		DefaultToolCallingChatOptions options = new DefaultToolCallingChatOptions();
-		options.setToolCallbacks(getToolCallbacks());
-		options.setToolNames(getToolNames());
-		options.setToolContext(getToolContext());
-		options.setInternalToolExecutionEnabled(getInternalToolExecutionEnabled());
-		options.setModel(getModel());
-		options.setFrequencyPenalty(getFrequencyPenalty());
-		options.setMaxTokens(getMaxTokens());
-		options.setPresencePenalty(getPresencePenalty());
-		options.setStopSequences(getStopSequences());
-		options.setTemperature(getTemperature());
-		options.setTopK(getTopK());
-		options.setTopP(getTopP());
-		return (T) options;
-	}
-
-	public static Builder builder() {
-		return new Builder();
+	public static Builder<?> builder() {
+		return new Builder<>();
 	}
 
 	/**
 	 * Default implementation of {@link ToolCallingChatOptions.Builder}.
 	 */
-	public static final class Builder implements ToolCallingChatOptions.Builder {
+	public static class Builder<B extends Builder<B>> extends DefaultChatOptionsBuilder<B>
+			implements ToolCallingChatOptions.Builder<B> {
 
-		private final DefaultToolCallingChatOptions options = new DefaultToolCallingChatOptions();
+		protected @Nullable List<ToolCallback> toolCallbacks;
+
+		protected @Nullable Map<String, Object> toolContext;
 
 		@Override
-		public ToolCallingChatOptions.Builder toolCallbacks(List<ToolCallback> toolCallbacks) {
-			this.options.setToolCallbacks(toolCallbacks);
-			return this;
+		public B clone() {
+			B copy = super.clone();
+			copy.toolCallbacks = this.toolCallbacks == null ? null : new ArrayList<>(this.toolCallbacks);
+			copy.toolContext = this.toolContext == null ? null : new HashMap<>(this.toolContext);
+			return copy;
 		}
 
 		@Override
-		public ToolCallingChatOptions.Builder toolCallbacks(ToolCallback... toolCallbacks) {
+		public B toolCallbacks(@Nullable List<ToolCallback> toolCallbacks) {
+			if (toolCallbacks != null) {
+				this.toolCallbacks = new ArrayList<>(toolCallbacks);
+			}
+			else {
+				this.toolCallbacks = null;
+			}
+			return self();
+		}
+
+		@Override
+		public B toolCallbacks(ToolCallback... toolCallbacks) {
 			Assert.notNull(toolCallbacks, "toolCallbacks cannot be null");
-			this.options.setToolCallbacks(Arrays.asList(toolCallbacks));
-			return this;
+			if (this.toolCallbacks == null) {
+				this.toolCallbacks = new ArrayList<>();
+			}
+			this.toolCallbacks.addAll(List.of(toolCallbacks));
+			return self();
 		}
 
 		@Override
-		public ToolCallingChatOptions.Builder toolNames(Set<String> toolNames) {
-			this.options.setToolNames(toolNames);
-			return this;
+		public B toolContext(@Nullable Map<String, Object> context) {
+			if (context != null) {
+				if (this.toolContext == null) {
+					this.toolContext = new HashMap<>();
+				}
+				this.toolContext.putAll(context);
+			}
+			else {
+				this.toolContext = null;
+			}
+			return self();
 		}
 
 		@Override
-		public ToolCallingChatOptions.Builder toolNames(String... toolNames) {
-			Assert.notNull(toolNames, "toolNames cannot be null");
-			this.options.setToolNames(Set.of(toolNames));
-			return this;
-		}
-
-		@Override
-		public ToolCallingChatOptions.Builder toolContext(Map<String, Object> context) {
-			this.options.setToolContext(context);
-			return this;
-		}
-
-		@Override
-		public ToolCallingChatOptions.Builder toolContext(String key, Object value) {
+		public B toolContext(String key, Object value) {
 			Assert.hasText(key, "key cannot be null");
 			Assert.notNull(value, "value cannot be null");
-			Map<String, Object> updatedToolContext = new HashMap<>(this.options.getToolContext());
-			updatedToolContext.put(key, value);
-			this.options.setToolContext(updatedToolContext);
-			return this;
-		}
-
-		@Override
-		public ToolCallingChatOptions.Builder internalToolExecutionEnabled(
-				@Nullable Boolean internalToolExecutionEnabled) {
-			this.options.setInternalToolExecutionEnabled(internalToolExecutionEnabled);
-			return this;
-		}
-
-		@Override
-		public ToolCallingChatOptions.Builder model(@Nullable String model) {
-			this.options.setModel(model);
-			return this;
-		}
-
-		@Override
-		public ToolCallingChatOptions.Builder frequencyPenalty(@Nullable Double frequencyPenalty) {
-			this.options.setFrequencyPenalty(frequencyPenalty);
-			return this;
-		}
-
-		@Override
-		public ToolCallingChatOptions.Builder maxTokens(@Nullable Integer maxTokens) {
-			this.options.setMaxTokens(maxTokens);
-			return this;
-		}
-
-		@Override
-		public ToolCallingChatOptions.Builder presencePenalty(@Nullable Double presencePenalty) {
-			this.options.setPresencePenalty(presencePenalty);
-			return this;
-		}
-
-		@Override
-		public ToolCallingChatOptions.Builder stopSequences(@Nullable List<String> stopSequences) {
-			this.options.setStopSequences(stopSequences);
-			return this;
-		}
-
-		@Override
-		public ToolCallingChatOptions.Builder temperature(@Nullable Double temperature) {
-			this.options.setTemperature(temperature);
-			return this;
-		}
-
-		@Override
-		public ToolCallingChatOptions.Builder topK(@Nullable Integer topK) {
-			this.options.setTopK(topK);
-			return this;
-		}
-
-		@Override
-		public ToolCallingChatOptions.Builder topP(@Nullable Double topP) {
-			this.options.setTopP(topP);
-			return this;
+			if (this.toolContext == null) {
+				this.toolContext = new HashMap<>();
+			}
+			this.toolContext.put(key, value);
+			return self();
 		}
 
 		@Override
 		public ToolCallingChatOptions build() {
-			return this.options;
+			return new DefaultToolCallingChatOptions(this.toolCallbacks, this.toolContext, this.model,
+					this.frequencyPenalty, this.maxTokens, this.presencePenalty, this.stopSequences, this.temperature,
+					this.topK, this.topP);
+		}
+
+		@Override
+		public B combineWith(ChatOptions.Builder<?> other) {
+			super.combineWith(other);
+			if (other instanceof Builder<?> that) {
+				if (that.toolCallbacks != null) {
+					if (this.toolCallbacks == null) {
+						this.toolCallbacks = new ArrayList<>(that.toolCallbacks);
+					}
+					else {
+						List<ToolCallback> merged = new ArrayList<>(this.toolCallbacks);
+						merged.addAll(that.toolCallbacks);
+						this.toolCallbacks = merged;
+					}
+				}
+				if (that.toolContext != null) {
+					if (this.toolContext == null) {
+						this.toolContext = new HashMap<>(that.toolContext);
+					}
+					else {
+						Map<String, Object> merged = new HashMap<>(this.toolContext);
+						merged.putAll(that.toolContext);
+						this.toolContext = merged;
+					}
+				}
+			}
+			return self();
 		}
 
 	}
