@@ -1,5 +1,5 @@
 /*
- * Copyright 2023-2025 the original author or authors.
+ * Copyright 2023-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,7 +22,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 import com.alibaba.fastjson2.JSONObject;
 import com.alibaba.fastjson2.TypeReference;
@@ -43,9 +43,9 @@ import com.azure.search.documents.models.IndexingResult;
 import com.azure.search.documents.models.SearchOptions;
 import com.azure.search.documents.models.VectorSearchOptions;
 import com.azure.search.documents.models.VectorizedQuery;
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 import org.jspecify.annotations.Nullable;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import org.springframework.ai.document.Document;
 import org.springframework.ai.document.DocumentMetadata;
@@ -78,12 +78,13 @@ import org.springframework.util.StringUtils;
  * @author Soby Chacko
  * @author Jinwoo Lee
  * @author Alexandros Pappas
+ * @author chabinhwang
  */
 public class AzureVectorStore extends AbstractObservationVectorStore implements InitializingBean {
 
 	public static final String DEFAULT_INDEX_NAME = "spring_ai_azure_vector_store";
 
-	private static final Logger logger = LoggerFactory.getLogger(AzureVectorStore.class);
+	private static final Log logger = LogFactory.getLog(AzureVectorStore.class);
 
 	private static final String SPRING_AI_VECTOR_CONFIG = "spring-ai-vector-config";
 
@@ -173,10 +174,11 @@ public class AzureVectorStore extends AbstractObservationVectorStore implements 
 		List<float[]> embeddings = this.embeddingModel.embed(documents, EmbeddingOptions.builder().build(),
 				this.batchingStrategy);
 
-		final var searchDocuments = documents.stream().map(document -> {
+		final var searchDocuments = IntStream.range(0, documents.size()).mapToObj(i -> {
+			Document document = documents.get(i);
 			SearchDocument searchDocument = new SearchDocument();
 			searchDocument.put(ID_FIELD_NAME, document.getId());
-			searchDocument.put(this.embeddingFieldName, embeddings.get(documents.indexOf(document)));
+			searchDocument.put(this.embeddingFieldName, embeddings.get(i));
 			searchDocument.put(this.contentFieldName, document.getText());
 			searchDocument.put(this.metadataFieldName, new JSONObject(document.getMetadata()).toJSONString());
 
@@ -264,7 +266,7 @@ public class AzureVectorStore extends AbstractObservationVectorStore implements 
 
 				return Document.builder().id(id).text(content).metadata(metadata).score(result.getScore()).build();
 			})
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	@Override
@@ -313,7 +315,9 @@ public class AzureVectorStore extends AbstractObservationVectorStore implements 
 
 		SearchIndex index = this.searchIndexClient.createOrUpdateIndex(searchIndex);
 
-		logger.info("Created search index: {}", index.getName());
+		if (logger.isInfoEnabled()) {
+			logger.info("Created search index: " + index.getName());
+		}
 	}
 
 	@Override
@@ -345,7 +349,9 @@ public class AzureVectorStore extends AbstractObservationVectorStore implements 
 			return (parsed == null) ? new HashMap<>() : new HashMap<>(parsed);
 		}
 		catch (Exception ex) {
-			logger.warn("Failed to parse metadata JSON. Using empty metadata. json={}", metadataJson, ex);
+			if (logger.isWarnEnabled()) {
+				logger.warn("Failed to parse metadata JSON. Using empty metadata. json=" + metadataJson, ex);
+			}
 			return new HashMap<>();
 		}
 	}
